--- a/Projects/Portfolio/portfolio.css
+++ b/Projects/Portfolio/portfolio.css
@@ -103,6 +103,7 @@ navbar a:hover{
 
 .inputstyle{
     width: 450px;
+    border-radius: 8px;
 }
 
 #me{
@@ -115,6 +116,17 @@ navbar a:hover{
     margin-right: 50px;
 }
 
+#btn {
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+}
+
 .messagestyle {
-    width: 1000px;
+    width: 1025px;
+    border-radius: 15px;
+}
+
+#TBD{
+    margin-left: 250px;
 }
